package adapter_pattern.object_adapter;

public interface ITarget {
    void operation();
}
